<resources>
    <string name="app_name">MusicStructureApp</string>

    <string name="nowPlaying">Now Playing</string>
    <string name="album">Album</string>
    <string name="playlist">Playlist</string>

    <string name="pause_music">Pause music</string>
    <string name="play_music">Play music</string>
    <string name="next_song">Skip to the next song</string>
    <string name="previous_song">Skip to the previous song</string>
    <string name="shuffle_music">Shuffle music</string>
    <string name="repeat_song">Repeat song</string>

    <string name="zeroDuration">0:00</string>
    <string name="songDuration">0:00</string>

    <string name="songNowPlaying">Title</string>
    <string name="songArtist_Album">Artist - Album</string>
    <string name="songLyrics">Lyrics of playing song</string>

    <string name="artist_1">Sabaton</string>
    <string name="artist_2">Rage Against the Machine</string>
    <string name="artist_3">Alestorm</string>
    <string name="artist_4">Amaranthe</string>
    <string name="artist_5">Five Finger Death Punch</string>

    <string name="album_1">Carolus Rex</string>
    <string name="album_2">Rage Against the Machine</string>
    <string name="album_3">Black Sails at Midnight</string>
    <string name="album_4">Massive Addictive</string>
    <string name="album_5">The Wrong Side of Heaven and the Righteous Side of Hell</string>

    <string name="title_1">Carolus Rex</string>
    <string name="title_2">Killing in the Name</string>
    <string name="title_3">Keelhauled</string>
    <string name="title_4">Massive Addictive</string>
    <string name="title_5">Wrong Side of Heaven</string>






</resources>
